--- a/index.html
+++ b/index.html
@@ -44,21 +44,20 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <hr>
 <b>Current activities</b>
 <ul>
-<li> Attending the <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search</a>.
-Providence, RI, June 10-14, 2019.
-<li> Attending the <a href=https://sigmod2019.org/>ACM SIGMOD/PODS</a> conference. Amsterdam, June 30-July 5, 2019.
-<li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12, 2019.
-<li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17, 2019.
-<li> Panelist on <i>Present and future of Theoretical Computer Science (not only) in Italy </i> at the <a href=https://disat.uninsubria.it/~simone.tini/ICTCS/program.html>20th Italian Conference on Computer Science</a>.
-<li> Attending the <a href=https://www.sigsac.org/ccs/CCS2019/>ACM CCS 2019</a> conference. London, November 11-15, 2019.
-<li> At home, trying to avoid COVID-19. Salerno, March-May, 2020.
-<li> Still at home, trying to avoid COVID-19 while teaching Algorithms 
-and Cryptography. Salerno, October-December 2020.
+<li>Invited speaker at the <a href=https://easyconferences.eu/ciac2023/>13th International Conference on Algorithms and Complexity</a>. Speaking about <i>The Complexity of Secure RAMs</i>, 13 – 16 June, 2023, Larnaca, Cyprus.
+<li>Teaching at the <a href=https://sites.google.com/uniurb.it/fosad/home/fosad-2022>FOSAD School</a>, August 29-September 2, 2022, in beautiful Bertinoro.
+<li> Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
-<li>
-Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
-<li>Teaching at the <a href=https://sites.google.com/uniurb.it/fosad/home/fosad-2022>FOSAD School</a>, August 29-September 2, 2022, 
-in beautiful Bertinoro.
+<li> Still at home, trying to avoid COVID-19 while teaching Algorithms 
+<li> At home, trying to avoid COVID-19. Salerno, March-May, 2020.
+<li> Attending the <a href=https://www.sigsac.org/ccs/CCS2019/>ACM CCS 2019</a> conference. London, November 11-15, 2019.
+and Cryptography. Salerno, October-December 2020.
+<li> Panelist on <i>Present and future of Theoretical Computer Science (not only) in Italy </i> at the <a href=https://disat.uninsubria.it/~simone.tini/ICTCS/program.html>20th Italian Conference on Computer Science</a>.
+<li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17, 2019.
+<li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12, 2019.
+<li> Attending the <a href=https://sigmod2019.org/>ACM SIGMOD/PODS</a> conference. Amsterdam, June 30-July 5, 2019.
+<li> Attending the <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search</a>. Providence, RI, June 10-14, 2019.
+
 </ul>
 
 <hr>
@@ -67,6 +66,7 @@ in beautiful Bertinoro.
 <li>
 <i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption</i>
 <a href=https://doi.org/10.56553/popets-2023-0025>PETS 23</a>
+with Ghous Amjad, Sarvar Patel, Kevin Yeo, and Moti Yung.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -75,7 +75,7 @@ We study encrypted storage schemes where a client outsources data to an untruste
 
 <li>
 <i>Lower Bound Framework for Differentially Private and Oblivious Data Structures</i>.
-<a href=https://ia.cr/2022/1553>Eurocrypt 2023</a>
+<a href=https://ia.cr/2022/1553>Eurocrypt 2023</a> with Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -88,7 +88,8 @@ We also address an unfortunate issue with this rich line of work where the lower
 </div>
 <li>
 <i>Secure Selections on Encrypted Multi-writer Streams</i>
-<a href=https://doi.org/10.1145/3485470>ACM Transactions on Privacy and Security</a>
+<a href=https://doi.org/10.1145/3485470>ACM Transactions on Privacy and Security</a>, v. 25, no. 1, 
+with Angelo Massimo Perillo and Alberto Trombetta.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -99,6 +100,8 @@ We propose security model for this problem that we call Secure Selective Stream 
 <li>
 <i>Anamorphic Encryption: Private Communication against a Dictator</i>.
 <a href=https://ia.cr/2022/639>Eurocrypt 2022</a>
+with 
+Duong Hieu Phan and Moti Yung.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -112,7 +115,7 @@ In this work, as a technical demonstration of the futility of the dictator’s d
 
 <li>
 <i>Limits of Preprocessing for Single-Server PIR.</i>
-<a href=https://eprint.iacr.org/2022/235.pdf>SODA 22.</a>
+<a href=https://eprint.iacr.org/2022/235.pdf>SODA 22</a> with Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract3');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract3" style="display:none;">
@@ -139,7 +142,8 @@ adversary that is critical to proving our higher lower bounds.
 
 <li>
 <i>Efficient Boolean Search over Encrypted Data with Reduced Leakage.</i>
-<a href=https://eprint.iacr.org/2021/1227>ASIACRYPT 21.</a>
+<a href=https://eprint.iacr.org/2021/1227>ASIACRYPT 21</a>
+with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract2');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract2" style="display:none;">
@@ -150,7 +154,8 @@ As our main contribution, we present the first fully dynamic constructions of vo
 
 <li>
 <i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>.
-<a href=https://eprint.iacr.org/2019/1132>CRYPTO 20.</a> 
+<a href=https://eprint.iacr.org/2019/1132>CRYPTO 20</a> 
+with Sarvar Patel and Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
 
