--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <li> Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
 <li> Still at home, trying to avoid COVID-19 while teaching Algorithms 
+and Cryptography. Salerno, October-December 2020.
 <li> At home, trying to avoid COVID-19. Salerno, March-May, 2020.
 <li> Attending the <a href=https://www.sigsac.org/ccs/CCS2019/>ACM CCS 2019</a> conference. London, November 11-15, 2019.
-and Cryptography. Salerno, October-December 2020.
 <li> Panelist on <i>Present and future of Theoretical Computer Science (not only) in Italy </i> at the <a href=https://disat.uninsubria.it/~simone.tini/ICTCS/program.html>20th Italian Conference on Computer Science</a>.
 <li> Organizing the <a href=http://odsa.unisa.it>ODSA: Oblivious Data Structures and Algorithms</a> workshop. Bertinoro, July 14-17, 2019.
 <li> Attending the <a href=https://cryptolowerbounds.wordpress.com/>Lower Bounds in Cryptography</a> workshop. Bertinoro, July 7-12, 2019.
@@ -65,7 +65,7 @@ and Cryptography. Salerno, October-December 2020.
 <ul>
 <li>
 <i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption</i>
-<a href=https://doi.org/10.56553/popets-2023-0025>PETS 23</a>
+<a href=https://doi.org/10.56553/popets-2023-0025>PETS 23,</a>
 with Ghous Amjad, Sarvar Patel, Kevin Yeo, and Moti Yung.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
@@ -75,7 +75,7 @@ We study encrypted storage schemes where a client outsources data to an untruste
 
 <li>
 <i>Lower Bound Framework for Differentially Private and Oblivious Data Structures</i>.
-<a href=https://ia.cr/2022/1553>Eurocrypt 2023</a> with Kevin Yeo.
+<a href=https://ia.cr/2022/1553>Eurocrypt 2023,</a> with Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -99,9 +99,8 @@ We propose security model for this problem that we call Secure Selective Stream 
 </div>
 <li>
 <i>Anamorphic Encryption: Private Communication against a Dictator</i>.
-<a href=https://ia.cr/2022/639>Eurocrypt 2022</a>
-with 
-Duong Hieu Phan and Moti Yung.
+<a href=https://ia.cr/2022/639>Eurocrypt 2022,</a>
+with Duong Hieu Phan and Moti Yung.
 <br>
 [<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract4" style="display:none;">
@@ -115,7 +114,7 @@ In this work, as a technical demonstration of the futility of the dictator’s d
 
 <li>
 <i>Limits of Preprocessing for Single-Server PIR.</i>
-<a href=https://eprint.iacr.org/2022/235.pdf>SODA 22</a> with Kevin Yeo.
+<a href=https://eprint.iacr.org/2022/235.pdf>SODA 22,</a> with Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract3');">Show/Hide abstract</a>]
 <div class="abstract" id="abstract3" style="display:none;">
@@ -127,7 +126,7 @@ and stored by the server to be used to perform private queries in expected time 
 public preprocessing setting of Beimel et al. [JoC, 2004] where the hint is publicly available to everyone
 including the adversary.
 We prove that for any single-server computationally secure PIR with preprocessing it must be that
-tr = &#937;(n log n) when r = &#937;(log n). If r = O(log n), we show that t = &#937;(n). Our lower bound holds even
+tr = &#937;(n log n) when r = &#937;(log n). If r=O(log n), we show that t = &#937;(n). Our lower bound holds even
 when the scheme errs with probability 1/n^2
 and the adversary’s distinguishing advantage is 1/n.
 Our work improves upon the tr = &#937;(n) lower bound of Beimel et al. [JoC, 2004].
@@ -142,7 +141,7 @@ adversary that is critical to proving our higher lower bounds.
 
 <li>
 <i>Efficient Boolean Search over Encrypted Data with Reduced Leakage.</i>
-<a href=https://eprint.iacr.org/2021/1227>ASIACRYPT 21</a>
+<a href=https://eprint.iacr.org/2021/1227>ASIACRYPT 21,</a>
 with Sarvar Patel, Joon Young Seo, and Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract2');">Show/Hide abstract</a>]
@@ -154,7 +153,7 @@ As our main contribution, we present the first fully dynamic constructions of vo
 
 <li>
 <i> Lower Bounds for Encrypted Multi-Maps and Searchable Encryption in the Leakage Cell Probe Mode</i>.
-<a href=https://eprint.iacr.org/2019/1132>CRYPTO 20</a> 
+<a href=https://eprint.iacr.org/2019/1132>CRYPTO 20,</a> 
 with Sarvar Patel and Kevin Yeo.
 <br>
 [<a href="javascript:toggle('abstract1');">Show/Hide abstract</a>]
