--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ and Cryptography. Salerno, October-December 2020.
 <b>Recent Papers</b>
 <ul>
 <li>
-<i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption</i>
+<i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption.</i>
 <a href=https://doi.org/10.56553/popets-2023-0025>PETS 23,</a>
 with Ghous Amjad, Sarvar Patel, Kevin Yeo, and Moti Yung.
 <br>
@@ -87,7 +87,7 @@ We also address an unfortunate issue with this rich line of work where the lower
 
 </div>
 <li>
-<i>Secure Selections on Encrypted Multi-writer Streams</i>
+<i>Secure Selections on Encrypted Multi-writer Streams.</i>
 <a href=https://doi.org/10.1145/3485470>ACM Transactions on Privacy and Security</a>, v. 25, no. 1, 
 with Angelo Massimo Perillo and Alberto Trombetta.
 <br>
@@ -98,7 +98,7 @@ Performing searches over encrypted data is a very current and active area. Sever
 We propose security model for this problem that we call Secure Selective Stream (SSS) and give a secure construction for it based on hard problems in Pairing-Based Cryptography. The cryptographic core of our construction is a new primitive, Amortized Orthogonality Encryption, that is crucial for the efficiency of the proposed implementation for SSS.
 </div>
 <li>
-<i>Anamorphic Encryption: Private Communication against a Dictator</i>.
+<i>Anamorphic Encryption: Private Communication against a Dictator.</i>.
 <a href=https://ia.cr/2022/639>Eurocrypt 2022,</a>
 with Duong Hieu Phan and Moti Yung.
 <br>
