--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ conference was great!
 <a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions. 111 papers accepted out of 418 submitted.
     
 <li>
-<a hred=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a>: reviewing submissions.
+<a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a>: reviewing submissions.
 </ul>
 
 
