--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ Then I moved to Salerno as a Professor of Computer Science.
 </p>
 
 <p>
+I am currently a visiting research scientist at Google in New York.
+</p>
+
+<p>
 My main research area is Theoretical Computer Science with a special focus on Cryptography.
 </p>
 
@@ -45,6 +49,7 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <b>Current activities</b>
 <ul>
 <li>Invited speaker at the <a href=https://easyconferences.eu/ciac2023/>13th International Conference on Algorithms and Complexity</a>. Speaking about <i>The Complexity of Secure RAMs</i>, 13 – 16 June, 2023, Larnaca, Cyprus.
+<li>Attending <a href=https://essa23.bici.events/program>ESSA '23, Encryption for Secure Search and other Algorithms</a>, 4 - 7 June, 2023, Bertinoro, Italy.
 <li>Teaching at the <a href=https://sites.google.com/uniurb.it/fosad/home/fosad-2022>FOSAD School</a>, August 29-September 2, 2022, in beautiful Bertinoro.
 <li> Going to <a href=https://eurocrypt.iacr.org/2022/>Eurocrypt 2022</a> in Trondheim, Norway. [<a href=https://github.com/giuper/talks/blob/master/Technical/anamorphic.pdf>Slides</a>]
 <li> <a href=https://conf.jnu.edu.cn/>Invited speaker at Inscrypt2020</a>
