--- a/Technical/index.html
+++ b/Technical/index.html
@@ -16,6 +16,12 @@ layout: default
     presented at the Google Private Computing Tech Talks, August 6, 2020
 <br>Joint work with Sarvar Patel, Kevin Yeo, and Moti Yung
 
+<li> <a href=./slides/snapshot.pdf>Limits of Breach-Resistant and Snapshot-Oblivious RAMs</a>
+
+    <br> presented at ESSA 23 in Bertinoro, Jun 4 - 7, 2023
+
+    <br>Joint work with Kevin Yeo.
+
 </ul>
 
 
