--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 <hr>
 <b>Current activities</b>
 <ul>
-<li>Attending <a href=https://petsymposium.org/2023/>The 23rd Privacy Enhancing Technologies Symposium</a>
+<li>Attending the <a href=https://petsymposium.org/2023/>23rd Privacy Enhancing Technologies Symposium</a>
 July 10–15, 2023 in Lausanne, Switzerland. Presenting our paper on Anamorphic Encryption.
 <li>Invited speaker at the <a href=https://easyconferences.eu/ciac2023/>13th International Conference on Algorithms and Complexity</a>. Speaking about <i>The Complexity of Secure RAMs</i>, 13 – 16 June, 2023, Larnaca, Cyprus.
 <li>Attending <a href=https://essa23.bici.events/program>ESSA '23, Encryption for Secure Search and other Algorithms</a>, 4 - 7 June, 2023, Bertinoro, Italy.
