--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@ conference was great!
 <a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a>: reviewing submissions.
 </ul>
 
+<li>
+<a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions.
+</ul>
+
 
 
 
