--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ We study encrypted storage schemes where a client outsources data to an untruste
 <i>Lower Bound Framework for Differentially Private and Oblivious Data Structures</i>.
 <a href=https://ia.cr/2022/1553>Eurocrypt 2023,</a> with Kevin Yeo.
 <br>
-[<a href="javascript:toggle('abstract4');">Show/Hide abstract</a>]
-<div class="abstract" id="abstract4" style="display:none;">
+[<a href="javascript:toggle('abstractL');">Show/Hide abstract</a>]
+<div class="abstract" id="abstractL" style="display:none;">
 In recent years, there has been significant work in studying data structures that provide privacy for the operations that are executed. These primitives aim to guarantee that observable access patterns to physical memory do not reveal substantial information about the queries and updates executed on the data structure. Multiple recent works, including Larsen and Nielsen [Crypto'18], Persiano and Yeo [Eurocrypt'19], Hubáček et al. [TCC'19] and Komargodski and Lin [Crypto'21], have shown that logarithmic overhead is required to support even basic RAM (array) operations for various privacy notions including obliviousness and differential privacy as well as different choices of sizes for RAM blocks  and memory cells .
 <p>
 We continue along this line of work and present the first logarithmic lower bounds for differentially private RAMs (DPRAMs) that apply regardless of the sizes of blocks  and cells . This is the first logarithmic lower bounds for DPRAMs when blocks are significantly smaller than cells, that is . Furthermore, we present new logarithmic lower bounds for differentially private variants of classical data structure problems including sets, predecessor (successor) and disjoint sets (union-find) for which sub-logarithmic plaintext constructions are known. All our lower bounds extend to the multiple non-colluding servers setting.
