--- a/Technical/index.html
+++ b/Technical/index.html
@@ -2,8 +2,17 @@
 layout: default
 ---
 
-<h1>Technical talks:</h1>
+<h1>Technical talks</h1>
 
+<h2>Talks on Searchable Encryption</h2>
+<ul>
+<li> <a href=./slides/volumeH.pdf>Volume Hiding Static Encrypted Multi-Maps</a>
+    <br>
+    presented at the Google Private Computing Tech Talks, August 6, 2020
+<br>Joint work with Sarvar Patel, Kevin Yeo, and Moti Yung
+</ul>
+
+<h2>Lower Bound Talks</h2>
 <ul>
 <li> <a href=./slides/icerm.pdf>Lower bound on encrypted multimaps</a>
     <br>
@@ -11,10 +20,6 @@ layout: default
         <a href=https://icerm.brown.edu/topical_workshops/tw19-1-es/>ICERM workshop on Encrypted Search, Jun 10 - 14, 2019</a>
 <br>Joint work with Sarvar Patel and Kevin Yeo
 
-<li> <a href=./slides/volumeH.pdf>Volume Hiding Static Encrypted Multi-Maps</a>
-    <br>
-    presented at the Google Private Computing Tech Talks, August 6, 2020
-<br>Joint work with Sarvar Patel, Kevin Yeo, and Moti Yung
 
 <li> <a href=./slides/snapshot.pdf>Limits of Breach-Resistant and Snapshot-Oblivious RAMs</a>
 
@@ -24,4 +29,16 @@ layout: default
 
 </ul>
 
+<h2>Anamorphic Talks</h2>
+<ul>
+    <li><a href=./slides/anamorphicEC22.pdf>Eurocrypt 22</a> talk on 
+        anamorphic encryption. First set of results, establishing 
+    feasibility of anamorphic encryption.
+    <li><a href=./slides/extendedAnamorphicEnc.pdf>Extended</a> talk on 
+        anamorphic encryption, given at NYU. 
+    <li><a href=./slides/anamorphicPETS23.pdf>PETS23</a> talk on 
+        anamorphic encryption. Establishing prevalence of anamorphic
+            encryption.
+    <li><a href=./slides/anamorphicSignatures.pdf>Anamorphic Signatures</a> talk, given at NYU, August 23.
+<li>
 
