--- a/papers.html
+++ b/papers.html
@@ -38,7 +38,7 @@ are performed on the same key or not. Note that constant-slowdown SSE is possibl
 operation are performed on the same key.
 
 <li>With Kevin Yeo, 
-in <a ref=https://link.springer.com/chapter/10.1007/978-3-031-30545-0_17>Eurocrypt 2023</a>,
+in <a href=https://link.springer.com/chapter/10.1007/978-3-031-30545-0_17>Eurocrypt 2023</a>,
 we provide a framework for proving lower bounds for differentially private
 and oblivious data structures.
 As a special case we prove the first non-trivial lower bound for
@@ -51,13 +51,13 @@ A similar result had been obtained by
 for the stronger notion of Oblivious RAM.
 
 <li>With Kevin Yeo, 
-in <a ref=https://link.springer.com/chapter/10.1007/978-3-031-38551-3_6>CRYPTO 2023</a>,
+in <a href=https://link.springer.com/chapter/10.1007/978-3-031-38551-3_6>CRYPTO 2023</a>,
 we prove that differentially private RAMs have the same slowdown even
 with respect to a transiente adversary that receives two memory snapshot
 and the transcript of one operation.
 
 <li>With Kevin Yeo, 
-in <a ref=https://epubs.siam.org/doi/10.1137/1.9781611977073.99>SODA 22</a>,
+in <a href=https://epubs.siam.org/doi/10.1137/1.9781611977073.99>SODA 22</a>,
 we prove a lower bound on the time/hint tradeoff of 
 computationally secure PIR with public preprocessing
 improving the previous result of
