--- a/papers.html
+++ b/papers.html
@@ -8,11 +8,26 @@
     <meta name="viewport" content="width=device-width">
 </head>
 
+<body>
+<div class="wrapper">
+      <header>
+        <h1>Minimal</h1>
+        <p>A Theme for GitHub Pages</p>
+        <p class="view"><a href="https://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <ul>
+          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
 <h1>Papers by subject</h1>
 
 <h2>The lower bound papers</h2>
 In this sequence of papers, we look at the intrinsinc complexity of 
 oblivios data structures with a special focus on ORAMs and PIR.
+
+<p>
 
 <h3>Background</h3>
 <ul>
@@ -82,3 +97,9 @@ improving the previous result of
 <a href=https://link.springer.com/article/10.1007/s00145-004-0134-y>Beimel, Ishai and Malkin</a>.
 
 </ul>
+
+</section>
+
+      <footer>
+        <p>This page is maintained by giuper@gmail
+      </footer>
