--- a/papers.html
+++ b/papers.html
@@ -11,9 +11,10 @@
 <body>
 <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="https://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <h1>Papers by subject</h1>
+        <p>Giuseppe Persiano</p>
+        <p class="view"><a href="https://giuper.github.io">My home page
+        <small>for teaching and research</small></a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -21,11 +22,9 @@
         </ul>
       </header>
       <section>
-<h1>Papers by subject</h1>
-
-<h2>The lower bound papers</h2>
-In this sequence of papers, we look at the intrinsinc complexity of 
-oblivios data structures with a special focus on ORAMs and PIR.
+<h1>The lower bound papers</h1>
+In this sequence of papers, I look at the intrinsinc complexity of 
+oblivios data structures with a special focus on ORAM and PIR.
 
 <p>
 
