--- a/index.html
+++ b/index.html
@@ -215,11 +215,16 @@ conference was great!
 <a href=https://eurocrypt.iacr.org/2023//>Eurocrypt 23</a>: reviewing submissions. 111 papers accepted out of 418 submitted.
     
 <li>
-<a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a>: reviewing submissions.
+<a href=https://www.sigsac.org/ccs/CCS2023/>CCS 2023</a> Applied Cryptography Track.
 
 <li>
-<a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions.
+<a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions, reviewing, program completed.
+
+<li> PKC 2024 in Sydney
+
+<li> CRYPTO 2024
 </ul>
+
 
 
 
