--- a/papers.html
+++ b/papers.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
+    <script src=js/abstract.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -15,12 +16,16 @@
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
         <ul>
+          <li><a href="javascript:toggle('lowerbounds')"><strong>Lower Bounds</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
+<section>
+
+
+<div id="lowerbounds" style="display:none">
 <h1>The lower bound papers</h1>
 In this sequence of papers, I look at the intrinsinc complexity of 
 oblivios data structures with a special focus on ORAM and PIR.
@@ -95,8 +100,8 @@ improving the previous result of
 <a href=https://link.springer.com/article/10.1007/s00145-004-0134-y>Beimel, Ishai and Malkin</a>.
 
 </ul>
-
 </section>
+</div>
 
       <footer>
         <p>This page is maintained by giuper@gmail
