--- a/papers.html
+++ b/papers.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
-    <script src=js/abstract.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -26,6 +25,8 @@
 
 
 <div id="lowerbounds" style="display:none">
+<section>
+    <script src=js/abstract.js" type="text/javascript"></script>
 <h1>The lower bound papers</h1>
 In this sequence of papers, I look at the intrinsinc complexity of 
 oblivios data structures with a special focus on ORAM and PIR.
