--- a/papers.html
+++ b/papers.html
@@ -15,18 +15,16 @@
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
         <ul>
-          <li><a href="javascript:toggle('lowerbounds')"><strong>Lower Bounds</strong></a></li>
+          <li><a href="javascript:toggle('lowerbounds')"><strong>Lower Bounds1</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-<section>
-
 
 <div id="lowerbounds" style="display:none">
 <section>
-    <script src=js/abstract.js" type="text/javascript"></script>
+<script src=js/abstract.js" type="text/javascript"></script>
 <h1>The lower bound papers</h1>
 In this sequence of papers, I look at the intrinsinc complexity of 
 oblivios data structures with a special focus on ORAM and PIR.
