--- a/papers.html
+++ b/papers.html
@@ -22,7 +22,7 @@
         </ul>
       </header>
 
-<div id="lowerbounds" style="display:none">
+<div id="lowerbounds" style="display:none;">
 <section>
 <script src=js/abstract.js" type="text/javascript"></script>
 <h1>The lower bound papers</h1>
