--- a/papers.html
+++ b/papers.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+<style>
+    .abstract {padding:3pt}
+</style>
 <div class="wrapper">
       <header>
         <h1>Papers by subject</h1>
@@ -15,14 +18,14 @@
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
         <ul>
-          <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds3</strong></a></li>
+          <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds4</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
 
-<div id="lowerbounds" style="display:none;">
+<div class="abstract" id="lowerbounds" style="display:none;">
 <section>
 <script src=js/abstract.js" type="text/javascript"></script>
 <h1>The lower bound papers</h1>
