--- a/papers.html
+++ b/papers.html
@@ -27,7 +27,7 @@
 
 <div class="abstract" id="lowerbounds" style="display:none;">
 <section>
-<script src=js/abstract.js" type="text/javascript"></script>
+<script src="js/abstract.js" type="text/javascript"></script>
 <h1>The lower bound papers</h1>
 In this sequence of papers, I look at the intrinsinc complexity of 
 oblivios data structures with a special focus on ORAM and PIR.
