--- a/papers.html
+++ b/papers.html
@@ -18,7 +18,7 @@
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
         <ul>
-          <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds5</strong></a></li>
+          <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
