--- a/npapers.html
+++ b/npapers.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script>$(function() {
-         $("#includeHtml").load("rr.html");
+         $("#lowerbounds").load("subjects/lowerbounds.html");
+         $("#anamorphic").load("subjects/anamorphic.html");
       });
     </script>
 
@@ -25,15 +26,15 @@
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
         <ul>
-          <li><a href="javascript:toggle('includeHtml');"><strong>Lower Bounds</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds</strong></a></li>
+          <li><a href="javascript:toggle('anamorphic');"><strong>Anamoprhic</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
 
-<div class="abstract" id="includeHtml" style="display:none;">
-</div>
+<div class="abstract" id="lowerbounds" style="display:none;"></div>
+<div class="abstract" id="anamorphic" style="display:none;"></div>
     
 <footer>
     <p>This page is maintained by giuper@gmail
