--- a/npapers.html
+++ b/npapers.html
@@ -27,7 +27,7 @@
         <small>for teaching and research</small></a></p>
         <ul>
           <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds</strong></a></li>
-          <li><a href="javascript:toggle('anamorphic');"><strong>Anamoprhic</strong></a></li>
+          <li><a href="javascript:toggle('anamorphic');"><strong>Anamorphic Crypto</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
         </ul>
