--- a/npapers.html
+++ b/npapers.html
@@ -12,7 +12,7 @@
          $("#anamorphic").load("subjects/anamorphic.html");
       });
     </script>
-    <script src="js/subject.js" type="text/javascript"></script>
+    <script src="js/subject1.js" type="text/javascript"></script>
 
 </head>
 
