--- a/subjects/anamorphic.html
+++ b/subjects/anamorphic.html
@@ -1,5 +1,5 @@
     <section>
-    <script src="js/subject.js" type="text/javascript"></script>
+    <script src="js/subject1.js" type="text/javascript"></script>
     <h1>The anamorphic papers </h1>
     
     
