--- a/npapers.html
+++ b/npapers.html
@@ -12,7 +12,7 @@
          $("#anamorphic").load("subjects/anamorphic.html");
       });
     </script>
-    <script src="js/subject1.js" type="text/javascript"></script>
+    <script src="js/subject.js" type="text/javascript"></script>
 
 </head>
 
@@ -22,7 +22,7 @@
 </style>
 <div class="wrapper">
       <header>
-        <h1>Papers by subject 5</h1>
+        <h1>Papers by subject</h1>
         <p>Giuseppe Persiano</p>
         <p class="view"><a href="https://giuper.github.io">My home page
         <small>for teaching and research</small></a></p>
