--- a/subjects/lowerbounds.html
+++ b/subjects/lowerbounds.html
@@ -1,5 +1,5 @@
     <section>
-    <script src="js/subject1.js" type="text/javascript"></script>
+    <script src="js/subject.js" type="text/javascript"></script>
 
     <h1>The lower bound papers</h1>
     In this sequence of papers, I look at the intrinsinc complexity of 
