--- a/npapers.html
+++ b/npapers.html
@@ -10,6 +10,7 @@
     <script>$(function() {
          $("#lowerbounds").load("subjects/lowerbounds.html");
          $("#anamorphic").load("subjects/anamorphic.html");
+         $("#nizk").load("subjects/nizk.html");
       });
     </script>
     <script src="js/subject.js" type="text/javascript"></script>
@@ -29,7 +30,7 @@
         <ul>
           <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds</strong></a></li>
           <li><a href="javascript:toggle('anamorphic');"><strong>Anamorphic Crypto</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="javascript:toggle('NIZK');"><strong>NIZK</strong></a></li>
         </ul>
       </header>
 
