--- a/npapers.html
+++ b/npapers.html
@@ -30,12 +30,13 @@
         <ul>
           <li><a href="javascript:toggle('lowerbounds');"><strong>Lower Bounds</strong></a></li>
           <li><a href="javascript:toggle('anamorphic');"><strong>Anamorphic Crypto</strong></a></li>
-          <li><a href="javascript:toggle('NIZK');"><strong>NIZK</strong></a></li>
+          <li><a href="javascript:toggle('nizk');"><strong>NIZK</strong></a></li>
         </ul>
       </header>
 
 <div class="abstract" id="lowerbounds" style="display:none;"></div>
 <div class="abstract" id="anamorphic" style="display:none;"></div>
+<div class="abstract" id="nizk" style="display:none;"></div>
     
 <footer>
     <p>This page is maintained by giuper@gmail
