PKC Call for papers

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ My main research area is Theoretical Computer Science with a special focus on Cr
 </ul>
 
 <hr>
-<b>Current activities</b>
+<b>Recent activities</b>
 <ul>
 <li>Attending <a href=https://crypto.iacr.org/2023/>CRYPTO 2023</a> in Santa Barbara.
 <li>Attending the <a href=https://petsymposium.org/2023/>23rd Privacy Enhancing Technologies Symposium</a>
@@ -219,7 +219,8 @@ conference was great!
 <li>
 <a href=https://www.augusta.edu/ccs/conferences/cans2023/index.php>CANS 2023</a>: accepting submissions, reviewing, program completed.
 
-<li> PKC 2024 in Sydney
+<li> Area Chair for Theoretical Foundations and Advanced Primitives for <a href=https://pkc.iacr.org/2024/callforpapers.php>PKC 2024</a> in Sydney.
+Deadline for submissions: Oct. 15, 2023.
 
 <li> CRYPTO 2024
 </ul>
