Adding Snapshot Lower Bound paper from CRYPTO 24

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@ and Cryptography. Salerno, October-December 2020.
 <b>Recent Papers</b>
 <ul>
 <li>
+<i>Limits of Breach-Resistant and Snapshot-Oblivious RAMs.</i>
+<a href=https://link.springer.com/chapter/10.1007/978-3-031-38551-3_6>CRYPTO 24,</a>
+with Kevin Yeo.
+<br>
+[<a href="javascript:toggle('abstract8');">Show/Hide abstract</a>]
+<div class="abstract" id="abstract8" style="display:none;">
+Oblivious RAMs (ORAMs) are an important cryptographic primitive that enable outsourcing data to a potentially untrusted server while hiding patterns of access to the data. ORAMs provide strong guarantees even in the face of a persistent adversary that views the transcripts of all operations and resulting memory contents. Unfortunately, the strong guarantees against persistent adversaries comes at the cost of efficiency as ORAMs are known to require  overhead.
+
+In an attempt to obtain faster constructions, prior works considered security against snapshot adversaries that only have limited access to operational transcripts and memory. We consider -snapshot adversaries that perform s data breaches and views the transcripts of  total queries. Promisingly, Du, Genkin and Grubbs [Crypto’22] presented an ORAM construction with O(log L) overhead protecting against (1,L)-snapshot adversaries with 
+the transcript of L consecutive operations from a single breach.
+For small values of L, this outperforms standard ORAMs.
+
+In this work, we tackle whether it is possible to further push this construction beyond a single breach. Unfortunately, we show that protecting against even slightly stronger snapshot adversaries becomes difficult. As our main result, we present an \Omega(log n)  lower bound for any ORAM protecting against a (3, 1)-snapshot adversary that performs three breaches and sees the transcript of only one query. In other words, our lower bound holds even if an adversary observes only memory contents during two breaches while managing to view the transcript of only one query in the other breach. Therefore, we surprisingly show that protecting against a snapshot adversary with three data breaches is as difficult as protecting against a persistent adversary.
+</div>
+
+<li>
 <i>Dynamic Volume-Hiding Encrypted Multi-Maps with Applications to Searchable Encryption.</i>
 <a href=https://doi.org/10.56553/popets-2023-0025>PETS 23,</a>
 with Ghous Amjad, Sarvar Patel, Kevin Yeo, and Moti Yung.
